--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Metsalainen",
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
+    "discord-ytdl-core": "^4.1.5",
     "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
     "discord.js": "^12.3.1",
     "discord.js-commando": "github:discordjs/Commando",
